# vulcan-py

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATING.md  README.md  build.sh  changelog.md  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/: CODEOWNERS
.github/workflows/: main.yml  python-publish.yml
docs/: developing.md
scripts/: format.sh  tests.sh
testbackend/: __init__.py  test_ep.py
tests/: conftest.py  test_build_backend.py  test_builder.py  test_cli.py
tests/cli/: test_builder.py  test_cli.py
tests/data/: test_application_pyproject.toml
vulcan/: __init__.py  build_backend.py  builder.py  cli.py  dist.py  isolation.py  metadata.py  options.py  plugins.py  test_ep.py
vulcan/scripts/: setuppy_to_pep621.py  vulcan_1_to_2.py
