[project]
name = "vulcan-py"
version = "1.1.2"
description = "Tool for leveraging lockfiles to pin dependencies in wheels and sdists"
authors = [{name="Joel Christiansen", email="joelchristiansen@optiver.com"}]
urls = {github="https://github.com/optiver/vulcan-py"}
license = {text="Apache License Version 2.0"}
readme = "README.md"
keywords = [ "build", "tooling" ] 
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.6"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
vulcan="vulcan.cli:main"
convert_pep621="vulcan.scripts.setuppy_to_pep621:convert"

[project.entry-points."vulcan.pre_build"]
example_plugin="vulcan.plugins:test_plugin"

[tool.vulcan]
packages = [ "vulcan" ]
no-lock = true

# e.g. if these are specified, like `pip install vulcan[cli]
[tool.vulcan.extras]
cli=["shiv~=0.5.2","build[virtualenv]~=0.3.0", "click~=8.0"]
# remove when https://github.com/psf/fundable-packaging-improvements/issues/25 is complete.
convert=["pkginfo~=1.7"]

[tool.vulcan.dependencies]
setuptools='~=56.0'
wheel='~=0.36.2'
dataclasses="~=0.8; python_version<='3.6'"
typing_extensions='~=3.7'
tomlkit = "~=0.7"
ppsetuptools = "==2.0.2"
importlib_metadata = "~=4.6; python_version<='3.7'"
editables = '~=0.2'

[build-system]
# in other build systems, this would says "requires=['setuptools', 'vulcan']" and that is all that is needed
# to correctly install and use this tool
requires=['setuptools', 
          'tomlkit',
          'dataclasses', 
          'wheel',
          'typing_extensions', 
          'ppsetuptools==2.0.0',
          'editables~=0.2',
          "importlib_metadata; python_version<='3.7'"]
build-backend="vulcan.build_backend"
backend-path=["."]  # and this line should be removed for all other projects

[tool.pytest.ini_options]
filterwarnings = [ "ignore:.*the imp module is deprecated in favour of importl.*:DeprecationWarning" ]
junit_family="xunit1"
testpaths = [ "tests", ]
markers = [ 
    "cli: Tests that require full cli dependencies" 
]

[tool.mypy]
files = ["vulcan","tests"]
# the following configs are the equivalent of --strict, with the exception of --no-implicit-optional
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

# extra warnings
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ['vulcan.isolation']
warn_unused_ignores = false
