[project]
name = "vulcan-py"
version = "2.1.0"
description = "Tool for leveraging lockfiles to pin dependencies in wheels and sdists"
authors = [{name="Joel Christiansen", email="joelchristiansen@optiver.com"}]
urls = {github="https://github.com/optiver/vulcan-py"}
license = {text="Apache License Version 2.0"}
keywords = [ "build", "tooling" ]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License"
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
vulcan="vulcan.cli:main"
convert_pep621="vulcan.scripts.setuppy_to_pep621:convert"
convert_vulcan2="vulcan.scripts.vulcan_1_to_2:convert"

[project.entry-points."vulcan.pre_build"]
example_plugin="vulcan.plugins:test_plugin"

[tool.vulcan]
no-lock = true
add-all-extra = true

[tool.setuptools.packages.find]
include = ["vulcan*"]

[tool.vulcan.extras]
cli=["shiv~=0.5.2","build[virtualenv]~=0.8.0", "click~=8.0"]
convert=["pkginfo~=1.9"]

[tool.vulcan.dev-extras]
test=["pytest", "pytest-asyncio", "pkginfo", "coverage"]
mypy=["mypy==1.8.0", "types-click", "types-dataclasses", "types-setuptools"]
flake8=["flake8==7.0.0"]

[tool.vulcan.dependencies]
setuptools='~=63.0'
wheel='~=0.36.2'
tomlkit = "~=0.11"
editables = '~=0.5'
packaging = "~=22.0"

[build-system]
# in other build systems, this would says "requires=['setuptools', 'vulcan']" and that is all that is needed
# to correctly install and use this tool
requires=['setuptools~=63.0',
          'tomlkit~=0.9',
          'wheel',
          'editables~=0.5']
build-backend="vulcan.build_backend"
backend-path=["."]  # and this line should be removed for all other projects

[tool.pytest.ini_options]
filterwarnings = [
 "ignore:.*the imp module is deprecated in favour of importl.*:DeprecationWarning",
 "ignore:.*The loop argument is deprecated since Python 3.8, and scheduled for removal in Python 3.10.*:DeprecationWarning" ]
junit_family="xunit1"
testpaths = [ "tests", ]
markers = [ "cli: Tests that require full cli dependencies" ]
asyncio_mode = 'auto'

[tool.black]
line-length = 120

[tool.mypy]
packages = ["vulcan", "tests"]
strict = true